Finished part 2.5 (moderate performance)